2010-05-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dosection.c (dosection): Add newline before "@start".
	* testdata/*.pro, testdata/*.xps: Updated.

2010-05-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bbox.c: Declare functions used only in this file as static,
	remove trailing whitespace.
	* color.c: The same.
	* dosection.c: The same.
	* dospecial.c: The same.
	* dpicheck.c: The same.
	* drawPS.c: The same.
	* dviinput.c: The same.
	* dvips.c: The same.
	* emspecial.c: The same.
	* finclude.c: The same.
	* header.c: The same.
	* hps.c: The same.
	* loadfont.c: The same.
	* output.c: The same.
	* papersiz.c: The same.
	* repack.c: The same.
	* resident.c: The same.
	* t1part.c: The same.
	* tfmload.c: The same.
	* unpack.c: The same.
	* virtualfont.c: The same.
	* writet1.c: The same. Skip compilation of unused functions.
	* protos.h: Remove all these extern declarations.
	* t1part.h: Remove unused K&R function declarations.

2010-05-06  Karl Berry  <karl@tug.org>

	* dvips.texi: use p@TeX{} for the manual.

2010-05-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c: revert cmdout() and remove lastspecial=1 in jscout().
	Thanks Peter.

2010-05-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c: rewrite the previous fix not to change the output format
	for non-pTeX dvi.

2010-05-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c: minor fix of the function cmdout(). Without the fix, broken
	ps is generated for pTeX's dvi.

2010-05-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Implement pTeX extensions, based on patches sent by Akira.
	Modified to reproduce former output files. Added -noptex option.
	* bbox.c, color.c, dopage.c, dospecial.c, download.c, drawPS.c,
	dvips.[ch], finclude.c, fontdef.c, loadfont.c, output.c,
	pprescan.c, prescan.c, protos.h, protos_add.h, repack.c,
	resident.c, scanpage.c, search.c, skippage.c, tex.lpro,
	tfmload.c, virtualfont.c: pTeX extensions.
	* dvips.1, dvips.help, dvips.texi: Documentation.
